Fixed z-index issues with the mobile navigation.

--- a/source/stylesheets/global.css.sass
+++ b/source/stylesheets/global.css.sass
@@ -498,6 +498,7 @@ section
 			padding:
 				top: $leading
 				bottom: $leading/4
+			z-index: 100
 			li
 				font-size: 1.25 * $scale * 1rem
 #front-page
