--- a/source/stylesheets/layout.css.sass
+++ b/source/stylesheets/layout.css.sass
@@ -55,6 +55,7 @@ section
 			text-align: center
 			padding: 0 40px
 				top: $leading / 2
+			z-index: initial
 			li
 				font-size: 1.5 * $scale * 1rem
 	.content
